@@ -55,6 +55,15 @@ jsoup changelog
   * Bugfix: when wrapping an element with HTML that included multiple sibling elements, those siblings were incorrectly
     added as children of the wrapper instead of siblings.
 
+  * Bugfix: when setting the content of a script or style tag via the Element#html(String) method, the content is
+    treated as a DataNode, not a TextNode. This means that characters like '<' will no longer be incorrectly escaped.
+    As a related ergonomic improvement, the same behavior applies for Element#text(String) (i.e. the content will be
+    treated as a DataNode, despite calling the text() method.
+    <https://github.com/jhy/jsoup/issues/1419>
+
+  * Bugfix: when wrapping HTML around an existing element with Element#wrap(String), will no take the content as
+    provided and ignore normal HTML tree-building rules. This allows for e.g. a div tag to be placed inside of p tags.
+
 *** Release 1.13.1 [2020-Feb-29]
   * Improvement: added Element#closest(selector), which walks up the tree to find the nearest element matching the
     selector.
